fix: rework app css so that equations are squished

--- a/static/style.css
+++ b/static/style.css
@@ -9,14 +9,14 @@ main {
   width: 100%;
   max-width: 1000px;
   padding: 5px 10px;
-  max-width: 750px;
   box-sizing: border-box;
   margin: auto;
   display: flex;
 }
 
 nav {
-  min-width: 160px;
+  min-width: 200px;
+  font-size:16px;
 }
 
 header {
